NEW: Physical Condition track for character

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,9 @@
 <script src="services/mongo.js"></script>
 <script src="services/session.js"></script>
 
+<!-- filters -->
+<script src="shared/filters/tables.js"></script>
+
 <!-- modules -->
 <script src="nav/nav.module.js"></script>
 <script src="nav/nav.controller.js"></script>
