--- a/app/index.html
+++ b/app/index.html
@@ -25,10 +25,10 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="main-nav-1">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#/">Creator<span class="sr-only">(current)</span></a></li>
-                <li><a href="#characters">Characters</a></li>
-                <li><a href="#appendix">Appendix</a></li>
+            <ul id="navMain" class="nav navbar-nav" ng-controller="NavCtrl">
+                <li id="navCreator" class="active"><a href="#/" ng-click="navClick($event)">Creator</a></li>
+                <li id="navCharacter"><a href="#characters" ng-click="navClick($event)">Characters</a></li>
+                <li id="naveAppendix"><a href="#appendix" ng-click="navClick($event)">Appendix</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right" ng-controller="HelpCtrl">
                 <li class="dropdown" uib-dropdown is-open="status.isopen">
